--- a/android/res/layout/activity_item.xml
+++ b/android/res/layout/activity_item.xml
@@ -102,6 +102,7 @@
         </LinearLayout>
         
         <LinearLayout 
+            android:id="@+id/activity_item_guests_container"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
