--- a/android/res/layout/urgent.xml
+++ b/android/res/layout/urgent.xml
@@ -25,17 +25,15 @@
             android:src="@drawable/urgent_logo" />
 
         <TextView
-            android:id="@+id/urgent_logo_view"
+            android:id="@+id/urgent_current_show"
             
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             
             android:layout_marginBottom="-4dp"
-            android:gravity="center"
             android:background="@null"
                         
-            android:text="U LUISTERT NAAR SAMANTA"
             android:textColor="#878787" 
             android:textSize="16sp"
             
@@ -79,45 +77,43 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:orientation="vertical">
         
         <LinearLayout
-            android:id="@+id/urgent_huidige_container"
+            android:id="@+id/urgent_vorige_container"
 
             android:layout_width="match_parent"
-            android:layout_height="26dp"
+            android:layout_height="34dp"
             android:layout_marginTop="14dp"
             
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             
-            android:weightSum="4"
-           
-            android:orientation="horizontal">
+            android:visibility="gone"
+            android:orientation="vertical">
             
             <TextView        
-                android:layout_width="0dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="top"
                 
                 android:includeFontPadding="false"
 
-                android:text="vorige:"
+                android:text="@string/urgent_vorige_title"
                 android:textSize="10sp"
                 android:textColor="#02C0FA" />
             
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:layout_gravity="center"
+                android:id="@+id/urgent_vorige"
                 
-                android:text="LOWER DENS - BRAINS" 
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                
                 android:textColor="#878787"
                 android:textAlignment="center"
+                android:paddingLeft="10dp"
                  
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -134,38 +130,35 @@
             android:id="@+id/urgent_huidige_container"
 
             android:layout_width="match_parent"
-            android:layout_height="26dp"
+            android:layout_height="34dp"
             android:layout_marginTop="14dp"
             
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             
-            android:weightSum="4"
-            
-            android:orientation="horizontal"
+            android:orientation="vertical"
         
+            android:visibility="gone"
             android:background="#02C0FA">
             
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="top"
                 
                 android:includeFontPadding="false"
                 
-                android:text="speelt nu:" 
+                android:text="@string/urgent_huidige_title" 
                 android:textSize="10sp"/>
             
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/urgent_huidige"
+                
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:layout_gravity="center"
                             
-                android:text="MOBY - IN THIS WORLD" 
-                android:textColor="#000000" 
+                android:textColor="#FFFFFF" 
                 android:textAlignment="center"
+                android:paddingLeft="10dp"
                 
                 android:focusable="true"
                 android:focusableInTouchMode="true"
