--- a/android/res/menu/settings.xml
+++ b/android/res/menu/settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/settings"
-          android:title="@string/settings"
+          android:title="@string/title_preferences"
           android:icon="@android:drawable/ic_menu_manage"
           android:showAsAction="never" />
     <item android:id="@+id/about"
