--- a/android/res/layout/activity_item.xml
+++ b/android/res/layout/activity_item.xml
@@ -2,62 +2,71 @@
 
     
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            
             android:paddingTop="5dp">
 
     <LinearLayout 
         android:orientation="vertical"
+        
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:paddingRight="5dp"
-        android:paddingLeft="5dp">
+        android:layout_height="wrap_content">
         
         <LinearLayout 
             android:orientation="horizontal"
+            
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">     
     
             <ImageView android:id="@+id/activity_item_image"
+            
+                       android:adjustViewBounds="true"
+            
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
-                       android:layout_weight="1">
+                       android:layout_weight="1"
+                       android:layout_gravity="top">
             </ImageView>
             
-            <TextView android:id="@+id/activity_item_title"
-                      android:layout_width="0dp"
-                      android:layout_height="wrap_content"
-                      android:layout_marginTop="5dp"
-                      android:layout_marginBottom="3dp"
-                      android:gravity="center"
-                      android:textColor="@color/ugent_blue_dark"
-                      android:textStyle="bold"
-                      android:textSize="20dp"
-                      android:layout_weight="2">
-            </TextView>
+            <LinearLayout 
+                android:orientation="vertical"
+                
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+            
+                android:paddingLeft="10dp">
+                
+                <TextView android:id="@+id/activity_item_title"
+                
+                          android:layout_width="fill_parent"
+                          android:layout_height="wrap_content"
+                          
+                          android:textColor="@color/ugent_blue_dark"
+                          android:textStyle="bold"
+                          android:textSize="20dp">
+                </TextView>
+
+                <TextView android:id="@+id/activity_item_association"
+                
+                          android:layout_width="fill_parent"
+                          android:layout_height="wrap_content">
+                </TextView>
+            </LinearLayout>
+            
         </LinearLayout>
 
-        <LinearLayout 
-            android:orientation="horizontal"
+        <View
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TextView android:id="@+id/activity_item_association_title"
-                      android:layout_width="0dp"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:textColor="@color/ugent_blue_dark"
-                      android:textStyle="bold"
-                      android:text="@string/activity_item_association_title">
-            </TextView>
-
-            <TextView android:id="@+id/activity_item_association"
-                      android:layout_width="0dp"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="3">
-            </TextView>
-        </LinearLayout>
+            android:layout_height="1dp"
+            
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            
+            android:background="@color/ugent_lightgrey"
+        />
 
         <LinearLayout 
             android:orientation="horizontal"
@@ -65,64 +74,118 @@
             android:layout_height="wrap_content">
 
             <TextView android:id="@+id/activity_item_date_title"
+            
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
-                      android:textColor="@color/ugent_blue_dark"
-                      android:textStyle="bold"
-                      android:text="@string/activity_item_date_title">
+                      
+                      android:gravity="right"
+                      
+                      android:text="@string/activity_item_date_title"
+                      android:textColor="#A3A3A3">
             </TextView>
 
             <TextView android:id="@+id/activity_item_date"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
-                      android:layout_weight="3">
+                      android:layout_weight="3"
+                      android:paddingLeft="10dp">
             </TextView>
         </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            
+            android:background="@color/ugent_lightgrey"
+        />
         
         <LinearLayout 
+            android:id="@+id/activity_item_location_container"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
             <TextView android:id="@+id/activity_item_location_title"
+            
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:textColor="@color/ugent_blue_dark"
-                      android:textStyle="bold"
-                      android:text="@string/activity_item_location_title">
+                      android:layout_weight="2"
+                      
+                      android:gravity="right"
+                      
+                      android:text="@string/activity_item_location_title"
+                      android:textColor="#A3A3A3">
             </TextView>
 
+                
             <TextView android:id="@+id/activity_item_location"
+                
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
-                      android:layout_weight="3">
+                      android:layout_weight="5"
+                      android:paddingLeft="10dp">
             </TextView>
+
+            <ImageView android:id="@+id/activity_item_directions"
+                
+                       android:src="@drawable/icon_directions"
+                       android:adjustViewBounds="true"
+                        
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_weight="1"
+                       
+                       android:paddingRight="15dp">
+            </ImageView>
+
         </LinearLayout>
+
+        <View
+            android:id="@+id/activity_item_location_bottomborder"
+            
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            
+            android:background="@color/ugent_lightgrey"
+        />
         
-        <LinearLayout 
+<!--        <LinearLayout 
             android:id="@+id/activity_item_guests_container"
+            
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
            
             <TextView android:id="@+id/activity_item_guests_title"
+            
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
-                      android:textColor="@color/ugent_blue_dark"
-                      android:textStyle="bold"
-                      android:text="@string/activity_item_guests_title">
+                      
+                      android:gravity="right"
+                      
+                      android:text="@string/activity_item_guests_title"
+                      android:textColor="#A3A3A3">
             </TextView>
             
             <LinearLayout 
                 android:id="@+id/activity_item_guests_container"
+                
                 android:orientation="vertical"
+                
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3">
+                android:layout_weight="3"
+                
+                android:paddingLeft="10dp">
                 
                 <TextView android:id="@+id/activity_item_guests"
                           android:layout_width="fill_parent"
@@ -138,19 +201,47 @@
             </LinearLayout>
             
         </LinearLayout>
-        
-        <TextView android:id="@+id/activity_item_content_title"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
-                  android:textColor="@color/ugent_blue_dark"
-                  android:textStyle="bold"
-                  android:text="@string/activity_item_content_title">
-        </TextView>
-            
-        <TextView android:id="@+id/activity_item_content"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content">
-        </TextView>
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            
+            android:background="@color/ugent_lightgrey"
+        />-->
+        
+        <LinearLayout 
+            android:id="@+id/activity_item_content_container"
+                
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            
+            android:orientation="horizontal">
+            
+            <TextView android:id="@+id/activity_item_content_title"
+        
+                      android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="1"
+                  
+                      android:gravity="right"
+                      
+                      android:text="@string/activity_item_content_title"
+                      android:textColor="#A3A3A3"
+        
+                      android:paddingLeft="10dp">
+            </TextView>
+            
+            <TextView android:id="@+id/activity_item_content"
+            
+                      android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="3"
+            
+                      android:paddingLeft="10dp">
+            </TextView>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
