--- a/android/res/layout/directionmarker.xml
+++ b/android/res/layout/directionmarker.xml
@@ -6,15 +6,31 @@
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_gravity="center"
+        android:gravity="center"
         android:padding="4dip"
-        android:src="@drawable/icon_meal"/>
+        android:adjustViewBounds="true"
+        android:src="@drawable/icon_directions"/>
+    
+    <View
+        android:id="@+id/activity_item_location_bottomborder"
+            
+        android:layout_width="1dp"
+        android:layout_height="fill_parent"
+            
+                       
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+            
+        android:background="@color/ugent_grey_light"
+        />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/title"
