--- a/android/res/values/color.xml
+++ b/android/res/values/color.xml
@@ -5,5 +5,7 @@
     <color name="ugent_blue_light">#DEE3EF</color>
     <color name="ugent_yellow_dark">#FFB300</color>
     <color name="ugent_white">#EAEAEA</color>
-    <color name="ugent_lightgrey">#AAC0C0C0</color>
+    
+    <color name="ugent_grey_light">#AAC0C0C0</color>
+    <color name="ugent_grey_dark">#A3A3A3</color>
 </resources>
