--- a/website/css/custom.css
+++ b/website/css/custom.css
@@ -23,11 +23,13 @@
   
   #app-store {
       display: block;
-      background: url("../img/app-store.svg");
-      width: 200px;
-      height: 59px;
+	  background-image:  url("../img/app-store.png");
+	  background-image:  none,url("../img/app-store.svg"), url("../img/app-store.png");
+      width: 172px;
+      height: 50px;
       margin-top: 10px;
       background-size: 100%;
+	  background-repeat: no-repeat;
   }
   
   #play-store {
@@ -42,6 +44,10 @@
   #wp-store {
       display: block;
       background: url("../img/wp-store.png");
+  	  border-radius:8px;
+  	  -moz-border-radius:8px;
+  	  -khtml-border-radius:8px;
+  	  -webkit-border-radius:8px;
       width: 172px;
       height: 60px;
       margin-top: 10px;
