--- a/android/res/xml/settings.xml
+++ b/android/res/xml/settings.xml
@@ -17,6 +17,16 @@
         </Preference>
 
     </PreferenceCategory>
- 
+    
+    <PreferenceCategory android:title="@string/pref_facebook" >
+        
+        <Preference android:title="@string/pref_facebook_title"    
+                    android:summary="@string/pref_facebook_summary">
+            
+            <intent android:action=".settings.FacebookAuthHelper" />
+            
+        </Preference>
+        
+    </PreferenceCategory>
  
 </PreferenceScreen>
