--- a/android/res/layout/settings_facebook.xml
+++ b/android/res/layout/settings_facebook.xml
@@ -2,53 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:orientation="vertical"
-              android:background="#303040" >
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal" >
-        <ImageView
-            android:id="@+id/splash_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
-            android:src="@drawable/icon" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="#AFDEFE"
-            android:textSize="28sp"
-            android:typeface="serif"
-            android:textStyle="italic"
-            android:text="@string/app_name" />
-    </LinearLayout>
-
+              android:orientation="vertical">
 
     <TextView
-        android:id="@+id/profile_name"
-        android:layout_width="174dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:lines="2"
-        android:textSize="17sp"
-        android:text="@string/get_started"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"/>
-
+        android:text="@string/pref_facebook_summary"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+    </TextView>
+    
     <com.facebook.widget.LoginButton
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
 
 </LinearLayout>
